After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741215 - [PATCH] libnm-gtk: fix library gettext usage
[PATCH] libnm-gtk: fix library gettext usage
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: Translations
unspecified
Other Linux
: Normal trivial
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks: nm-1.0
 
 
Reported: 2014-12-07 13:03 UTC by yvan
Modified: 2015-01-12 15:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-libnm-gtk-fix-library-gettext-usage-bgo-741215.patch (3.96 KB, patch)
2014-12-08 15:03 UTC, Dan Williams
none Details | Review

Description yvan 2014-12-07 13:03:18 UTC
Hi,

I'm not sure, but I think that the word "Wired" (displayed above "Wi-Fi" and "Battery" when you click on the right of the top bar) is missing in gnome-shell.master.pot and gnome-shell.gnome-3-14.pot.

Thanks again for your time and word,
Yvan
Comment 1 Florian Müllner 2014-12-07 13:42:11 UTC
The device description is picked up from NetworkManager, so the string "Wired" is not in the .pot file because it does not appear in gnome-shell. However it looks like the string should have a French translation, what version of NetworkManager are you using?
Comment 2 yvan 2014-12-07 13:52:12 UTC
Ok, thanks for the tip.

I'm using NetworkManager 1:0.9.10.0-14.git20140704.fc21 from Fedora 21. NetworkManager-wifi has the same version number.
Comment 3 yvan 2014-12-07 14:54:08 UTC
Indeed, I found a similar string here : http://cgit.freedesktop.org/NetworkManager/NetworkManager/tree/po/fr.po#n6129

I just checked the source of the package Fedora 21 provides (still 0.9.10.0-14.git20140704.fc21) and the fr.po file is not the same : I suppose it is outdated. You can grab the package for example at http://mirrors.ircam.fr/pub/fedora/linux/updates/21/SRPMS/n/NetworkManager-0.9.10.0-14.git20140704.fc21.src.rpm

I think I should report this to Fedora instead. If you agree, feel free to close this bug.

Yvan
Comment 4 Dan Winship 2014-12-07 15:10:52 UTC
The string actually comes from libnm-gtk, but it looks like libnm-gtk is broken and (a) not calling bindtextdomain, and (b) using gi18n.h rather than gi18n-lib.h, so it's not picking up its translations when used from gnome-shell (though they work from nm-applet and nm-connection-editor).

(cf http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=53f5e9af for the corresponding libnm-util fix)
Comment 5 yvan 2014-12-07 15:31:17 UTC
Fast and beautiful diagnostic !
Comment 6 Dan Williams 2014-12-08 15:03:00 UTC
Created attachment 292300 [details] [review]
0001-libnm-gtk-fix-library-gettext-usage-bgo-741215.patch
Comment 7 Thomas Haller 2014-12-08 15:20:03 UTC
(In reply to comment #6)
> Created an attachment (id=292300) [details] [review]
> 0001-libnm-gtk-fix-library-gettext-usage-bgo-741215.patch

LGTM
Comment 8 Dan Williams 2014-12-08 18:43:00 UTC
Pushed as:

commit 078b945806b56ff663d051fdd9c228e7ef68d23e
libnm-gtk: fix library gettext usage (bgo #741215)
Comment 9 Dan Williams 2014-12-08 18:57:29 UTC
And for nma-0-9-10:

commit cd7e1714a1af8c992a8829287e74e1882aa351ff